--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DemoCo Chatbot</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Chatbot</title>
 </head>
 <body>
-    <div id="chat-container">
-        <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Ask a question...">
-        <button id="send-button">Send</button>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="#">DemoCo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#chat">Chatbot</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1>Welcome to DemoCo</h1>
+            <p>Your source for company information and employee details.</p>
+        </div>
+    </header>
+
+    <section id="about" class="py-5">
+        <div class="container">
+            <h2 class="text-center">About Us</h2>
+            <p class="text-center">DemoCo is a fictitious company created for the purpose of this chatbot demonstration. We provide top-notch project management and diversity and inclusiveness research services.</p>
+        </div>
+    </section>
+
+    <section id="chat" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Chat with Our Bot</h2>
+            <div class="card mx-auto" style="max-width: 800px;">
+                <div class="card-body">
+                    <div id="chat-container">
+                        <div id="chat-box" class="mb-3"></div>
+                        <div id="user-input-container" class="input-group">
+                            <input type="text" id="user-input" class="form-control" placeholder="Ask a question..." autocomplete="off">
+                            <div class="input-group-append">
+                                <button id="send-button" class="btn btn-primary">Send</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact" class="py-4 bg-dark text-white text-center">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>For more information, please contact us at <a href="mailto:info@democo.com" class="text-white">info@democo.com</a>.</p>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
