Update README.md, frontend files, and refine response handling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="#">DemoCo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,18 +27,20 @@
             </div>
         </div>
     </nav>
-
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
             <h1>Welcome to DemoCo</h1>
-            <p>Your source for company information and employee details.</p>
+            <p>DemoCo is a fictional digital marketing agency. DemoCo is working with StellarTech, a leading provider of
+                high-quality manufacturing solutions
+                for businesses in various industries. StellarTech is embarking on a transformative journey to bolster
+                their sales and drive accelerated growth.</p>
         </div>
     </header>
 
     <section id="about" class="py-5">
         <div class="container">
             <h2 class="text-center">About Us</h2>
-            <p class="text-center">DemoCo is a fictitious company created for the purpose of this chatbot demonstration. We provide top-notch project management and diversity and inclusiveness research services.</p>
+            <p class="text-center"> Use Our ChatBot to get information about the company and our employes ..</p>
         </div>
     </section>
 
@@ -47,7 +52,9 @@
                     <div id="chat-container">
                         <div id="chat-box" class="mb-3"></div>
                         <div id="user-input-container" class="input-group">
-                            <input type="text" id="user-input" class="form-control" placeholder="Ask a question..." autocomplete="off">
+                            <input type="text" id="user-input" class="form-control"
+                                placeholder="Ask a question about DemoCo 's employes....." aria-label="User input"
+                                autocomplete="off">
                             <div class="input-group-append">
                                 <button id="send-button" class="btn btn-primary">Send</button>
                             </div>
@@ -61,13 +68,15 @@
     <footer id="contact" class="py-4 bg-dark text-white text-center">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>For more information, please contact us at <a href="mailto:info@democo.com" class="text-white">info@democo.com</a>.</p>
+            <p>For more information, please contact us at <a href="mailto:info@democo.com"
+                    class="text-white">info@democo.com</a>.</p>
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" defer></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
+
 </html>
